de/15.9/admin/synonym-guide.rst
==================
Synonym-Wörterbuch
==================

Übersicht
=========

Synonyme sind Wörter, die unterschiedlich geschrieben werden, aber dieselbe (oder eine sehr ähnliche) Bedeutung haben.
Beispiele hierfür sind „GB" und „Gigabyte", „PC" und „Computer" oder „Fernseher" und „TV".
Wenn Sie solche Wörter im Synonym-Wörterbuch von |Fess| registrieren, werden bei der Suche nach einem dieser Wörter auch Dokumente gefunden, die eines der anderen registrierten Synonyme enthalten.
Dadurch werden Suchlücken durch unterschiedliche Schreibweisen vermieden und die Trefferquote der Suche erhöht.

Sie können Synonyme für Wörter mit derselben Bedeutung (z. B. GB, Gigabyte) verwalten.

Verwaltung
==========

Anzeige
-------

Um die Synonym-Konfigurationsübersichtsseite zu öffnen, wählen Sie im linken Menü [System > Wörterbuch] aus und klicken Sie dann auf synonym.

|image0|

Klicken Sie auf den Konfigurationsnamen, um ihn zu bearbeiten.

Konfigurationsmethode
---------------------

Um die Synonym-Konfigurationsseite zu öffnen, klicken Sie auf die Schaltfläche „Neu erstellen".

|image1|

Konfigurationsparameter
-----------------------

Da die Standardkonfiguration für die Indexerstellung Bi-Gramm ist, müssen Sie darauf achten, dass das konvertierte Wort nicht zu einem einzelnen Zeichen wird.
Außerdem müssen Sie bei der Registrierung von Synonymen wie folgt vorgehen:

* Hiragana als Katakana registrieren
* Kleine Katakana als große Katakana registrieren
* Vollbreiten-Alphanumerika als Halbbreiten-Alphanumerika registrieren
* Synonyme nicht doppelt registrieren

Quelle
::::::

Geben Sie das Wort ein, das als Synonym behandelt werden soll.

Ziel
::::

Erweitern Sie das in der Quelle eingegebene Wort mit dem Zielwort.
Wenn Sie beispielsweise „TV" sowohl als „TV" als auch als „テレビ" behandeln möchten, geben Sie „TV" in der Quelle ein und „TV" und „テレビ" im Ziel.

.. note::

   Das Hinzufügen oder Ändern eines Synonyms wirkt sich allein noch nicht auf die Suchergebnisse aus.
   Laden Sie den Dokumentindex wie unter :ref:`dict-apply-changes` beschrieben neu.

Download
========

Sie können im Synonym-Wörterbuchformat herunterladen, das von Apache Lucene bereitgestellt wird.

Upload
======

Sie können im Synonym-Wörterbuchformat hochladen, das von Apache Lucene bereitgestellt wird.
Da Synonyme eine Ersetzung einer Wortgruppe durch eine andere Wortgruppe darstellen, werden in der Wörterbuchbeschreibung Kommas (,) und Konvertierung (=>) verwendet.
Um beispielsweise „TV" durch „テレビ" zu ersetzen, verwenden Sie => und schreiben wie folgt:

::

    TV=>テレビ

Um „fess" und „フェス" gleich zu behandeln, schreiben Sie wie folgt:

::

    fess,フエス=>fess,フエス

In solchen Fällen kann => weggelassen und wie folgt geschrieben werden:

::

    fess,フエス

Siehe auch
==========

- :doc:`../user/search-or`
- :doc:`../user/search-field`
- :doc:`dict-guide`


.. |image0| image:: ../../../resources/images/en/15.9/admin/synonym-1.png
.. |image1| image:: ../../../resources/images/en/15.9/admin/synonym-2.png
